# marketing-rag-assistant

./: .env.example  .env.test  .gitignore  @AGENTS.md  CLAUDE.md  README.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
.beads/: issues.jsonl
.github/workflows/: ci.yml
cloud/: pyproject.toml  requirements.api.txt  requirements.worker.txt
cloud/api/: app.py  deps.py
cloud/api/routes/: agents.py  auth.py  content.py  generated.py  integrations.py  jobs.py  settings.py  uploads.py
cloud/shared/: auth.py  config.py  db.py  dispatch.py  jobs.py  query_agent.py  storage.py  tasks.py
cloud/tests/: test_auth_magic_link.py  test_query_agent.py
cloud/workers/: app.py  ingest_worker.py  repurpose_worker.py
electron/: main.ts
infra/gcp/: AUTH.md  README.md  main.tf  terraform.tfvars.example  variables.tf
sidecar/: api.py  bootstrap.py  config.py  db.py  embed.py  ingest.py  llm.py  pyproject.toml  rag.py  requirements.txt  search.py
sidecar/sample_corpus/: 01_content_discovery.md  02_personalization.md  03_case_studies.md  04_seo_content.md  05_email_nurture.md
sidecar/tests/: test_api.py  test_db.py  test_ingest.py
src/: App.tsx  index.css  index.html
src/api/: client.ts  types.ts
src/main/: api-key-store.ts  index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: ApiKeyDialog.tsx  App.tsx  AuditPanel.tsx  LibraryPanel.tsx  index.css
src/renderer/src/lib/: sidecar-url.test.ts  sidecar-url.ts
src/views/: ContentDetail.tsx  Dashboard.tsx  Generated.tsx  Library.tsx  Login.tsx  Settings.tsx
