[project]
name = "content-intelligence-hub-cloud"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.4.0",
    "onnxruntime>=1.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["api*", "shared*", "workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
